--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,4 @@
-# Node modules
-node_modules/
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # Logs
 logs/
@@ -15,3 +14,27 @@ npm-debug.log*
 # Other
 coverage/
 dist/
+
+
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
